# LCLibrary

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Linux-Command-Library.code-workspace  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
Archiving_and_Compressing_Management/: Archiving_and_Compressing_Commands.md
File_and_Directory_Management/: File_and_Directory_Commands.md
Hardware_and _kernel _tools/: Hardware_Discovery.md  Kernel_Module_Tools.md
Linux_Directory_System/: Linux_Directory.md
Networking_Tools/: Networking_Commands.md
Package_Management/: Package_Management_Commands.md
Permissions_and_Ownership/: Permissions_and_Ownership_Commands.md
Process_Management/: Processing_Commands.md
Search_and_Filter_Management/: Search_and_Filter_Commands.md
Shell_and Scripting_Utilities/: Scripting_Commands.md
Shell_and Scripting_Utilities/Shell_Environment_Management/: Aliases.md
Shell_and_Scripting_Utilites/Shell_Environment_Management/: Aliases.md
System_Administration/: System_Admin_Commands.md
System_Information_and_Monitoring/: System_Info_and_Monitoring_Commands.md
TroubleShooting_Management/: TroubleShooting_Commands.md
User_and_Group_Management/: User_and_Group_Commands  User_and_Group_Commands.md
View_and_Edit_Management/: Viewing_and_Editing_Commands.md
Wildcards/: Wildcard_Commands.md
app/cli/: main.py
fileanddirectorymanagement/: file_and_directory_management  file_and_directory_management.md
lcl.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
templates/: command_templates.yml
(+60 files in other folders)
