[project]
name = "lcl"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12.3", 
  "pyyaml>=6.0.1", 
  "rich>=13.7.1"
]

[project.scripts]
# Typer app object named 'app' in app/cli/main.py
lcl = "app.cli.main:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]